# dams

./: .gitignore  handoff.md  index.html  package-lock.json  package.json  phase-one-final.md  phase-one-revised.md  phase-one.md  plan.md  readme.md  vite.config.ts
docs/: DEVELOPMENT_LOG.md  README.md  SUPERVISOR_REPORT.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  preservation.rs  preservation_simple.rs
src-tauri/src/database/: connection.rs
src-tauri/src/models/: preservation.rs
src-tauri/src/utils/: bagit.rs  checksums.rs  file_operations.rs  mod.rs
src/components/file-operations/: DropZone.tsx
src/components/preservation/: ProjectList.tsx
src/hooks/: useTauriCommands.ts
src/styles/: globals.css
src/types/: preservation.types.ts
