[package]
name = "cwpt"
version = "0.1.0"
description = "Creative Work Preservation Toolkit"
authors = ["CWPT Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.0", features = [] }
# tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system operations
walkdir = "2.5"
camino = "1.1"

# Checksums (using BLAKE3 for performance + SHA256 for compatibility)
blake3 = "1.5"
sha2 = "0.10"
md-5 = "0.10"

# File format detection
file-format = "0.25"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
